Correct Commit - Working app Architecture with Room as Source

--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -46,7 +46,6 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="45dp"
                     android:gravity="center"
                     android:text="Sample Card title"
                     android:textColor="@color/black"
@@ -57,7 +56,7 @@
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/beer_image"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.26999998" />
+                    app:layout_constraintVertical_bias="0.163" />
 
                 <TextView
                     android:id="@+id/tagLine"
@@ -65,30 +64,46 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:layout_marginRight="5dp"
+                    android:layout_marginBottom="8dp"
                     android:gravity="center"
                     android:text="Tagline"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/try_Now"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/beer_image"
                     app:layout_constraintTop_toBottomOf="@+id/title"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintVertical_bias="0.5" />
 
 
                 <ImageButton
                     android:id="@+id/favorite"
                     android:layout_width="45dp"
                     android:layout_height="35dp"
-                    android:layout_marginTop="4dp"
                     android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="16dp"
+                    android:layout_marginBottom="12dp"
                     android:background="@color/white"
                     android:src="@drawable/baseline_favorite_border_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tagLine" />
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/try_Now"
+                    app:layout_constraintTop_toBottomOf="@+id/title"
+                    app:layout_constraintVertical_bias="0.753" />
+
+                <Button
+                    android:id="@+id/try_Now"
+                    android:layout_width="87dp"
+                    android:layout_height="42dp"
+                    android:layout_marginBottom="23dp"
+                    android:text="Try Now!"
+                    android:textSize="9dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/favorite"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintHorizontal_chainStyle="spread"
+                    app:layout_constraintStart_toEndOf="@+id/beer_image" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
