--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#009bdc</color>
     <color name="grey">#a3a4a7</color>
+    <color name="darkBlue">#047DDD</color>
 </resources>
