--- a/app/src/main/res/layout/fragment_beer_.xml
+++ b/app/src/main/res/layout/fragment_beer_.xml
@@ -176,6 +176,8 @@
             android:layout_marginTop="25dp"
             android:layout_width="match_parent"
             android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="20dp"
             android:layout_height="wrap_content">
 
             <LinearLayout
