--- a/app/src/main/res/layout/fragment_beer_.xml
+++ b/app/src/main/res/layout/fragment_beer_.xml
@@ -13,6 +13,7 @@
         android:layout_margin="3dp"
         android:background="@drawable/bottom_sheet_background"
         android:orientation="horizontal"
+
         android:padding="15dp"
         tools:context=".presentation.ui.beerList.BeerList"
         tools:layout_editor_absoluteX="-65dp"
@@ -46,35 +47,15 @@
                     android:layout_width="match_parent"
                     android:layout_marginTop="8dp"
                     android:gravity="center"
+
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
-                    android:textSize="24dp"
+                    android:textSize="25dp"
                     android:textStyle="bold"
                     android:text="Title"/>
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/description"
-                    android:textColor="@color/blue"
-                    android:padding="8dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:gravity="center"
-                    android:textStyle="italic"
-                    android:text="About me?"
-
-                    android:textSize="18dp" />
-
-            </LinearLayout>
 
         </LinearLayout>
 
@@ -99,6 +80,7 @@
             android:id="@+id/tagline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             app:layout_constraintTop_toBottomOf="@id/imageLayout"
             android:layout_marginTop="4dp"
             android:text="We trush our brand"
@@ -126,7 +108,7 @@
 
                 <TextView
                     android:text="Liked By"
-                    android:textSize="21dp"
+                    android:textSize="22dp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:layout_width="match_parent"
@@ -136,7 +118,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="20dp"
                     android:text="Amount"
-                    android:textSize="21dp"
+                    android:textSize="22dp"
                     android:textStyle="bold"
                     android:textColor="@color/black"/>
 
@@ -150,6 +132,7 @@
                 android:orientation="vertical"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/no_of_reviews"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="21000"
@@ -158,6 +141,7 @@
                     android:gravity="end"/>
 
                 <TextView
+                    android:id="@+id/amount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="425"
