--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,6 +6,10 @@
         android:icon="@drawable/home"
         android:title="Home" />
     <item
+        android:id="@id/favoriteBeer"
+        android:icon="@drawable/baseline_favorite_24"
+        android:title="Favorite" />
+    <item
         android:id="@id/random_Beer_Fragment"
         android:icon="@drawable/random"
         android:title="Random" />
