--- a/app/src/main/res/layout/fragment_add_to__cart_.xml
+++ b/app/src/main/res/layout/fragment_add_to__cart_.xml
@@ -1,16 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context=".presentation.ui.beerList.BeerList">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:gravity="center"
+    <data>
+
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Add_to_Cart_fragment" />
+        android:orientation="vertical"
 
-</LinearLayout>
+        tools:context="Beers.presentation.ui.beerList.BeerList">
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/addToCartSearchView"
+            android:layout_margin="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/search_view_background"
+            app:iconifiedByDefault="false"
+            app:queryBackground="@android:color/transparent"
+            app:queryHint="Ask for beers in cart!"
+            />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/addToCartRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+</layout>
