--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -27,6 +27,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+
                 android:layout_height="match_parent">
 
                 <LinearLayout
@@ -36,9 +37,10 @@
 
                     <ImageView
                         android:id="@+id/beer_image"
+                        android:background="@color/cardViewBack"
                         android:layout_width="match_parent"
                         android:padding="20dp"
-                        android:layout_height="232dp"
+                        android:layout_height="234dp"
                         android:src="@drawable/ic_launcher_background"
                         ></ImageView>
 
@@ -48,20 +50,49 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:background="@color/cardViewBack"
                 android:layout_weight="2">
 
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_marginTop="8dp"
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-
+                    android:orientation="horizontal"
                     android:layout_weight="1"
-                    android:text="Title"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:textSize="22dp"
-                    android:gravity="center"/>
+                    android:layout_marginTop="8dp">
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_marginTop="12dp"
+                        android:layout_width="0dp"
+
+                        android:layout_height="match_parent"
+
+                        android:layout_weight="2"
+                        android:text="Title"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:textSize="19.8dp"
+                        android:gravity="center" />
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:background="@color/cardViewBack"
+                        android:layout_marginTop="8dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent">
+
+                       <ImageView
+                           android:id="@+id/favorite"
+                           android:layout_width="match_parent"
+                           android:layout_height="match_parent"
+                           android:padding="8dp"
+                           android:src="@drawable/baseline_favorite_border_24"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
                 <TextView
                     android:id="@+id/tagLine"
                     android:layout_marginTop="8dp"
@@ -70,7 +101,8 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:text="Tagline"
-                    android:textSize="20dp"
+
+                    android:textSize="18dp"
                     android:gravity="center|top"/>
 
                 <LinearLayout
@@ -86,29 +118,72 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:gravity="center"
+                        android:orientation="vertical"
                         android:layout_weight="1">
 
-                        <TextView
-                            android:layout_width="0dp"
-                            android:text="Rs."
-                            android:textSize="24dp"
-                            android:textColor="@color/black"
-                            android:gravity="center"
-                            android:layout_marginLeft="5dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="2"/>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1">
 
-                        <TextView
-                            android:id="@+id/amount"
-                            android:textSize="24dp"
-                            android:textColor="@color/black"
-                            android:text="450"
-                            android:gravity="center|start"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="4">
+                            <ImageView
+                                android:layout_width="0dp"
+                                android:layout_height="33dp"
+                                android:background="@color/orange"
+                                android:layout_weight="0.8"
+                                android:src="@drawable/discount"/>
 
-                        </TextView>
+                            <TextView
+                                android:layout_width="0dp"
+
+                                android:text="Get discount"
+                                android:textSize="13dp"
+                                android:textStyle="bold"
+
+                                android:background="@color/orange"
+                                android:textColor="@color/white"
+                                android:gravity="start|center"
+
+                                android:layout_height="match_parent"
+                                android:layout_weight="2.2"/>
+
+                        </LinearLayout>
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:orientation="horizontal"
+                            android:layout_weight="1">
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_marginTop="8dp"
+                                android:text="Rs."
+                                android:textSize="18dp"
+                                android:textColor="@color/black"
+                                android:gravity="center"
+                                android:layout_marginLeft="5dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"/>
+
+
+                            <TextView
+                                android:id="@+id/amount"
+                                android:textSize="18dp"
+                                android:layout_marginTop="8dp"
+                                android:textColor="@color/black"
+                                android:text="450"
+                                android:gravity="center|start"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="2"/>
+
+                        </LinearLayout>
+
+
+
+
 
                     </LinearLayout>
 
@@ -116,18 +191,78 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:gravity="center"
+                        android:orientation="vertical"
                         android:layout_weight="1">
 
 
-                        <ImageView
-                            android:id="@+id/favorite"
-                            android:layout_width="66dp"
-                            android:layout_height="40dp"
-                            android:layout_gravity="center"
-                            android:tag="border_fav"
-                            android:layout_marginRight="18dp"
-                            android:background="@color/white"
-                            android:src="@drawable/baseline_favorite_border_24" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1">
+
+                            <TextView
+                                android:id="@+id/discount"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:textColor="@color/white"
+                                android:gravity="center|start"
+                                android:textSize="13dp"
+                                android:textStyle="bold"
+
+                                android:text="12"
+                                android:background="@color/orange"
+                                android:layout_weight="0.4"/>
+
+
+
+
+                            <TextView
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="%"
+                                android:background="@color/orange"
+                                android:textColor="@color/white"
+                                android:textStyle="bold"
+                                android:gravity="center|start"
+                                android:textSize="13dp"
+                                android:layout_weight="7.6"/>
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1">
+
+                            <TextView
+                                android:layout_marginLeft="20dp"
+                                android:id="@+id/rating"
+                                android:layout_width="0dp"
+                                android:layout_gravity="center"
+                                android:text="4.5"
+                                android:gravity="end"
+                                android:textStyle="bold"
+                                android:textColor="@color/white"
+                                android:background="@color/blue"
+                                android:layout_weight="1"
+                                android:layout_height="18dp"/>
+                            <ImageView
+                                android:id="@+id/star"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:layout_height="18dp"
+                                android:layout_gravity="center"
+
+                                android:tag="border_fav"
+                                android:layout_marginRight="18dp"
+                                android:background="@color/blue"
+                                android:src="@drawable/star" />
+
+                        </LinearLayout>
+
+
+
 
                     </LinearLayout>
 
