--- a/app/src/main/res/layout/fragment_random__beer_.xml
+++ b/app/src/main/res/layout/fragment_random__beer_.xml
@@ -7,23 +7,139 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        tools:context=".presentation.ui.beerList.BeerList">
+        android:orientation="vertical">
 
-        <!-- TODO: Update blank fragment layout -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_parent"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:text="Random_beer_fragment" />
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/randSearchView"
+            android:layout_margin="14dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/search_view_background"
+            app:iconifiedByDefault="false"
+            app:queryBackground="@android:color/transparent"
+            app:queryHint="Find beer for matching food item!"
+            />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+
+
+            <LinearLayout
+                android:id="@+id/searchFoodHere"
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/searchFoodtv"
+                    android:layout_width="match_parent"
+                    android:visibility="gone"
+                    android:layout_height="wrap_content"
+                    android:text="Beers with Searched Food!"
+                    android:padding="5dp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:textSize="20dp"/>
+
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/shimmer_view_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <include layout="@layout/randomlistshimmer" />
+
+                        <include layout="@layout/randomlistshimmer" />
+
+                        <include layout="@layout/randomlistshimmer" />
+
+                        <include layout="@layout/randomlistshimmer" />
+
+                        <include layout="@layout/randomlistshimmer" />
+
+                        <include layout="@layout/randomlistshimmer" />
+                    </LinearLayout>
+                </com.facebook.shimmer.ShimmerFrameLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/foodRv"
+                    android:layout_marginTop="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Light Beers!"
+                    android:padding="5dp"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="15dp"
+                    android:textStyle="bold"
+                    android:textSize="20dp"/>
+
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/lightBeerRv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Medium Beers!"
+                    android:padding="5dp"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="15dp"
+                    android:textStyle="bold"
+                    android:textSize="20dp"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/mediumBeerRv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Strong Beers!"
+                    android:padding="5dp"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="15dp"
+                    android:textStyle="bold"
+                    android:textSize="20dp"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/StrongBeerRv"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="42dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+
+
+            </LinearLayout>
+
+
+        </ScrollView>
+
+    </LinearLayout>
+
+
+
 </layout>
