--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,19 +9,29 @@
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/splashView"
         android:layout_width="wrap_content"
-        android:layout_height="400dp"
+        android:layout_height="250dp"
 
         app:layout_constraintBottom_toBottomOf="parent"
 
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintVertical_bias="0.151"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/splash"
         tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:layout_width="270dp"
+        android:layout_height="300dp"
+        android:src="@drawable/logo"
+        android:layout_marginRight="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/splashView" />
 
     <!--    <com.airbnb.lottie.LottieAnimationView-->
     <!--        android:id="@+id/loadingView"-->
