--- a/app/src/main/res/layout/fragment_beer_.xml
+++ b/app/src/main/res/layout/fragment_beer_.xml
@@ -304,7 +304,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/Recomendations"
-                            android:text="People also liked"
+                            android:layout_marginTop="10dp"
+                            android:text="We got more!"
                             android:textColor="@color/black"
                             android:textSize="22dp"
 
