--- a/app/src/main/res/layout/randomcardview.xml
+++ b/app/src/main/res/layout/randomcardview.xml
@@ -102,16 +102,15 @@
 
 
 
-               <com.airbnb.lottie.LottieAnimationView
+               <ImageView
                    android:background="@color/blue"
                    android:id="@+id/favorite"
-
+                   android:src="@drawable/favourite_border"
                    android:layout_width="0dp"
                    android:layout_weight="1"
-                   android:layout_height="55dp"
-                   app:lottie_autoPlay="true"
-                   app:lottie_loop="false"
-                   app:lottie_rawRes="@raw/favorite1"
+                   android:layout_height="45dp"
+                   android:padding="5dp"
+
                    tools:ignore="MissingConstraints" />
 
 
