Name change to RECOMMENDED

--- a/app/src/main/res/layout/fragment_beer_.xml
+++ b/app/src/main/res/layout/fragment_beer_.xml
@@ -305,7 +305,7 @@
                             android:layout_height="wrap_content"
                             android:id="@+id/Recomendations"
                             android:layout_marginTop="10dp"
-                            android:text="We got more!"
+                            android:text="Recommended!"
                             android:textColor="@color/black"
                             android:textSize="22dp"
 
