--- a/app/src/main/res/layout/fragment_add_to__cart_.xml
+++ b/app/src/main/res/layout/fragment_add_to__cart_.xml
@@ -26,6 +26,7 @@
             />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/addToCartRecyclerView"
+            android:layoutAnimation="@anim/layout_animation"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
