--- a/app/src/main/res/layout/fragment_beer_list.xml
+++ b/app/src/main/res/layout/fragment_beer_list.xml
@@ -69,6 +69,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_View"
             android:clipToPadding="false"
+            android:layoutAnimation="@anim/layout_animation"
             tools:listitem="@layout/beer_list_shimmer"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
