--- a/app/src/main/res/layout/fragment_favorite_beer.xml
+++ b/app/src/main/res/layout/fragment_favorite_beer.xml
@@ -30,6 +30,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/favoriteBeerRecyclerView"
+            android:layoutAnimation="@anim/layout_animation"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
